# BajsBoard

./: .gitignore  README.md  config.YAML  pyproject.toml
data/test_JSON_data/: bajs_10-11-2025_15-11-31.json  bajs_10-11-2025_21-02-43.json  bajs_11-11-2025_09-06-29.json  bajs_11-11-2025_21-09-35.json  bajs_12-11-2025_09-02-54.json  bajs_12-11-2025_09-30-11.json  bajs_12-11-2025_21-07-14.json  bajs_13-11-2025_09-01-27.json  bajs_13-11-2025_21-12-30.json  bajs_14-11-2025_09-14-47.json  bajs_14-11-2025_21-09-47.json
notebooks/: analyse_stations.ipynb  pregled_bajs_uporabe.qmd
src/data_cleaning/: data_wrangling.py  json_manipulation.py
src/visualization/: individual_station_plots.py  station_map.py
