[project]
name = "bajsboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
]
